# blitz-engine

./: README.md  progress.json  pyproject.toml
blitz_engine/: __init__.py  cli.py  engine.py  reporting.py
core/: __init__.py
core/calibration/: __init__.py  baseline.py
core/fusion/: bayesian_fusion.py
core/schemas/: __init__.py  cue_event.py
docs/: BLITZ_ENGINE_SPEC.md  CUE_CATALOG.md  QUICKSTART.md
governance/: ETHICS.md  INTENDED_USE.md  LICENSE  MODEL_CARD.md  PROHIBITED_USES.md
modalities/: __init__.py
modalities/audio/: __init__.py  analyzer.py
modalities/linguistic/: __init__.py  analyzer.py
planning/: ACCURACY_PLAN.md  COMPETITIVE_RESEARCH.md  INDEX.md  LIE_DETECTOR_BLUEPRINT.md  PROJECT_MAP.md  RESEARCH.md  signal_preview.py
planning/diagrams/: README.md  adapter_architecture.mmd  build_phases.mmd  data_states_privacy.mmd  data_transaction_flow.mmd  engine_queue_flow.mmd  fusion_detail.mmd  modality_pipeline.mmd  user_session_flow.mmd
tests/: test_text_mvp.py
voice/: APP_SPEC.md  README.md  VOICE_CUES.md
