[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blitz-engine"
version = "0.1.0"
description = "Research-first behavioral signal analyzer MVP"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["blitz_engine", "core", "core.calibration", "core.fusion", "core.schemas", "modalities", "modalities.linguistic"]
